force-app/main/default/objects/copado__Metadata_Group_Item__c/copado__Metadata_Group_Item__c.object-meta.xml
<CustomObject>
    <label>Metadata Item</label>
    <nameField>
        <displayFormat>MGI-{00000000}</displayFormat>
        <label>Metadata Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>