force-app/main/default/objects/copado__Metadata_Group_Item__c/fields/copado__Metadata_Group__c.field-meta.xml
<CustomField>
    <fullName>copado__Metadata_Group__c</fullName>
    <description>The parent metadata group this item belongs to</description>
    <inlineHelpText>The parent metadata group this item belongs to</inlineHelpText>
    <label>Parent Group</label>
    <referenceTo>copado__Metadata_Group__c</referenceTo>
    <relationshipLabel>Metadata Items</relationshipLabel>
    <relationshipName>Metadata_Group_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>