force-app/main/default/objects/copado__Metadata_Group_Item__c/fields/copado__Operator__c.field-meta.xml
<CustomField>
    <fullName>copado__Operator__c</fullName>
    <description>Match &apos;All&apos; metadata of this type, or only metadata whose name matches a pattern?</description>
    <inlineHelpText>Match &apos;All&apos; metadata of this type, or only metadata whose name matches a pattern?</inlineHelpText>
    <label>Metadata Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>copado__Operator</valueSetName>
    </valueSet>
</CustomField>