force-app/main/default/objects/copado__Metadata_Group_Item__c/fields/copado__Value__c.field-meta.xml
<CustomField>
    <fullName>copado__Value__c</fullName>
    <description>Match only metadata whose name matches this value (ignored if Metadata Name = &apos;All&apos; is selected)</description>
    <inlineHelpText>Match only metadata whose name matches this value (ignored if Metadata Name = &apos;All&apos; is selected)</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>