force-app/main/default/objects/copado__Metadata_Group_Item__c/validationRules/copado__Validate_Value_field_against_Operator.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Validate_Value_field_against_Operator</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(copado__Operator__c, &apos;All&apos;), NOT(ISBLANK(copado__Value__c)))</errorConditionFormula>
    <errorDisplayField>copado__Value__c</errorDisplayField>
    <errorMessage>When the Operator equals &apos;All&apos;, the Value field must be empty.</errorMessage>
</ValidationRule>