force-app/main/default/objects/copado__Metadata_Group_Item__c/validationRules/copado__Validate_Value_field_against_Operator_2.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Validate_Value_field_against_Operator_2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISPICKVAL(copado__Operator__c, &apos;All&apos;), ISBLANK(copado__Value__c))</errorConditionFormula>
    <errorMessage>When the Operator is not &quot;All&quot;, a Value is required.</errorMessage>
</ValidationRule>